v 2.0.0
=======
Systematic revision of spawning and copying methods for abstractions. Several parameters added/removed/renamed (switch to the corresponding parameters inside the APIOptions instead of the removed keyword parameters):
    DataAPIClient
        `_copy()`, `with_options()`: removed 'callers'
        `get_..._database...()`: removed 'api_path', 'api_version'
        `get_admin()`: removed 'dev_ops_url', 'dev_ops_api_version'
    AstraDBAdmin
        `(_copy)`: removed 'environment', 'dev_ops_url', 'dev_ops_api_version', 'callers'
        `(with_options)`: removed 'callers'
        `(create..._database)`: added `token`, `spawn_api_options`
        `(get..._database)`: removed 'api_path', 'api_version', 'database_request_timeout_ms', 'database_timeout_ms'; renamed 'database_api_options' => `spawn_api_options`
        `(get_database_admin)`: added `token`, `spawn_api_options`
    AstraDBDatabaseAdmin
        `_copy()`: removed 'api_endpoint', 'environment', 'dev_ops_url', 'dev_ops_api_version', 'api_path', 'api_version', 'callers'
        `with_options()`: removed 'api_endpoint', 'callers'
        `get..._database()`: removed 'api_path', 'api_version', 'database_request_timeout_ms', 'database_timeout_ms'; renamed 'database_api_options' => `spawn_api_options`
    DataAPIDatabaseAdmin
        `_copy()`: removed 'api_endpoint', 'environment', 'api_path', 'api_version', 'callers'
        `with_options()`: removed 'api_endpoint', 'callers'
        `get..._database()`: removed 'api_path', 'api_version', 'database_request_timeout_ms', 'database_timeout_ms'; renamed 'database_api_options' => `spawn_api_options`
    Database, AsyncDatabase
        `_copy()`: removed 'api_endpoint', 'callers', 'environment', 'api_path', 'api_version'
        `with_options()`: removed 'callers'; added `token`
        `to_[a]sync()`: removed 'api_endpoint', 'callers', 'environment', 'api_path', 'api_version', 